[bugfix]Scrolling on Safari, iOS

--- a/assets/scss/BP/retail-finder.scss
+++ b/assets/scss/BP/retail-finder.scss
@@ -751,7 +751,7 @@
         width: 100% !important;
         order: 1 !important;
         #map {
-          min-height: 400px !important;
+          min-height: 300px !important;
         }
 
         .top {
